syntax = "proto3";

service NoteService {
  rpc GetAll (SomeNoteList) returns (NoteList);
  rpc GetOne (NoteId) returns (Note);
  rpc Insert (Note) returns (Note);
  rpc Update (Note) returns (Note);
}

message Empty {}

message Note {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string importance = 4;
  string createDate = 5;
  string dueDate = 6;
  bool done = 7;
}

message SomeNoteList {
  string sortBy = 1;
  bool hideFinishedForRender = 2;
}

message NoteId {
   int32 id = 1;
}

message NoteList {
  repeated Note notes = 1;
}